# models/sensore.js
@@ -1,14 +1,12 @@
 const mongoose = require("mongoose")
 // schema
 const SensoreSchema = new mongoose.Schema({
-  id: {type:String, required:true, unique:true},
-  impianto : {type:mongoose.Schema.Types.ObjectId, ref:'Impianto'},
-  parametri : [{type:string}],
+  impianto: {type: mongoose.Schema.Types.ObjectId, ref:'Impianto', required:true},
   lat: {type:Number, required:true},
   long: {type:Number, required:true},
   dataDismissione: {type:Date},
-  isDismesso: {type:Boolean, required:true}
+  isDismesso: {type:Boolean, default:false}
 });
 
-const Sensore = mongoose.model("Sensore", SensoreSchema); //convert to model named Utente
+const Sensore = mongoose.model('Sensore', SensoreSchema, 'Sensori'); //convert to model named Sensore
 module.exports = Sensore
